--- a/taurl.cn/biu.html
+++ b/taurl.cn/biu.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="360-analysis-id" content="2w1j1d382x352p2s">
     <style type="text/css">
-        p{font-weight:700}p{font-weight:1000}p{font-size:48px}p{font-family:"楷体"}
+        p{font-weight:700}p{font-weight:1000}p{font-size:48px}p{font-family: "Open Sans", Arial, sans-serif;}
     </style>
-    <title>🎇新年烟花</title>
+    <title>🎇New Year Firework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -60,9 +60,8 @@
         <div class="stage-container remove">
             <div class="page_two hide">
                 <div id="text" style="display:none;">
-                    <p>Happy New Year!~<br>This is a New Year's firework I prepared for you🎆<br><br><br>
-                    <!-- <span id="time"></span><br><br><br> -->
-                    Happy New Year, may you have peace and joy ✨<br>
+                    <p>Happy New Year!~<br>
+                    May you have peace and joy ✨<br>
                     May the fireworks be like stars, and may all your wishes come true ✨<br><br><br>
                     Tap the screen for fireworks <br>
                     Share it and pass on the joy ❤️<br><br>
