--- a/taurl.cn/biu.html
+++ b/taurl.cn/biu.html
@@ -7,8 +7,12 @@
     <meta charset="utf-8">
     <meta name="360-analysis-id" content="2w1j1d382x352p2s">
     <style type="text/css">
-        p{font-weight:700}p{font-weight:1000}p{font-size:48px}p{font-family: "Open Sans", Arial, sans-serif;}
-    </style>
+        p {
+          font-family: "Open Sans", Arial, sans-serif;
+          font-weight: 400;
+          font-size: 48px; /* Optional: Set font size */
+        }
+      </style>
     <title>🎇New Year Firework</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
