--- a/taurl.cn/biu.html
+++ b/taurl.cn/biu.html
@@ -64,8 +64,8 @@
         <div class="stage-container remove">
             <div class="page_two hide">
                 <div id="text" style="display:none;">
-                    <p>Happy New Year~ 🎆<br>
-                    May you have peace and joy ✨<br>
+                    <p>Happy New Year~ <br>
+                    May you have peace and joy 🎆<br>
                     May the fireworks be like stars, and may all your wishes come true ✨<br><br><br>
                     Tap the screen for fireworks 🧨<br>
                     Share it and pass on the joy ❤️<br><br>
